fix video embed appearance on small screens

--- a/_sass/_custom.scss
+++ b/_sass/_custom.scss
@@ -822,3 +822,21 @@ iframe {
   display: block;
   margin: 0 auto;
 }
+
+// For responsive YouTube Embeds
+
+.video-container {
+position: relative;
+padding-bottom: 56.25%;
+padding-top: 30px; height: 0; overflow: hidden;
+}
+
+.video-container iframe,
+.video-container object,
+.video-container embed {
+position: absolute;
+top: 0;
+left: 0;
+width: 100%;
+height: 100%;
+}
